--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -124,9 +124,9 @@ dtls-psk = false
 dtls-legacy = true
 cisco-svc-client-compat = false
 client-bypass-protocol = false
-camouflage = false
-camouflage_secret = "mysecretkey"
-camouflage_realm = "Restricted Content"
+#camouflage = false
+#camouflage_secret = "mysecretkey"
+#camouflage_realm = "Restricted Content"
 
 #custom-header = "X-My-Header: hi there"
 # HTTP headers
