--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -38,7 +38,7 @@ ca-cert = /etc/ocserv/server-ca.pem
 #srk-pin = 1234
 sec-mod-scale = 1
 
-isolate-workers = false
+isolate-workers = true
 #banner = "Welcome"
 #pre-login-banner = "Welcome"
 max-clients = 512
