--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -59,7 +59,7 @@ use-occtl = true
 log-level = 2
 net-priority = 6
 device = vpns
-predictable-ips = false
+predictable-ips = true
 ping-leases = false
 mtu = 1412
 output-buffer = 0
