--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -54,7 +54,7 @@ persistent-cookies = false
 deny-roaming = false
 rekey-time = 86400
 rekey-method = ssl
-use-utmp = false
+use-utmp = true
 use-occtl = true
 log-level = 2
 net-priority = 6
