Disable dtls-legacy in ocserv configuration

--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -65,6 +65,6 @@ mtu = 1412
 output-buffer = 0
 cisco-client-compat = true
 dtls-psk = false
-dtls-legacy = true
+dtls-legacy = false
 cisco-svc-client-compat = false
 client-bypass-protocol = false
