--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -1,5 +1,20 @@
+
+#auth = "pam"
+#auth = "pam[gid-min=1000]"
+#auth = "plain[passwd=/etc/ocserv/ocpasswd,otp=./sample.otp]"
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
+#auth = "certificate"
+#auth = "radius[config=/etc/radiusclient/radiusclient.conf,groupconfig=true]"
+
 enable-auth = "certificate"
+#enable-auth = "gssapi"
+#enable-auth = "gssapi[keytab=/etc/key.tab,require-local-user-map=true,tgt-freshness-time=900]"
+#acct = "radius[config=/etc/radiusclient/radiusclient.conf]"
+
+#listen-host = [IP|HOSTNAME]
+#udp-listen-host = [IP|HOSTNAME]
+#listen-host-is-dyndns = true
+# listen-netns = "foo"
 
 tcp-port = 443
 udp-port = 443
@@ -7,64 +22,124 @@ udp-port = 443
 run-as-user = nobody
 run-as-group = daemon
 
-occtl-socket-file = /var/run/occtl.socket
+#occtl-socket-file = /var/run/occtl.socket
 socket-file = /var/run/ocserv-socket
-pid-file = /var/run/ocserv.pid
+#chroot-dir = /var/lib/ocserv
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 dh-params = /etc/ocserv/server-dh.pem
 ca-cert = /etc/ocserv/server-ca.pem
 
-default-select-group = Default
-auto-select-group = false
-config-per-user = /etc/ocserv/config-per-user/
-config-per-group = /etc/ocserv/config-per-group/
-#user-profile = profile.xml
+#pin-file = /etc/ocserv/pin.txt
+#srk-pin-file = /etc/ocserv/srkpin.txt
+
+#key-pin = 1234
+#srk-pin = 1234
+sec-mod-scale = 1
+
+isolate-workers = false
 #banner = "Welcome"
 #pre-login-banner = "Welcome"
-
-default-domain = srv
-ipv4-network = 192.168.144.0/24
-tunnel-all-dns = true
-dns = 192.168.144.1
-
-sec-mod-scale = 1
-isolate-workers = false
-max-clients = 0
-max-same-clients = 0
+max-clients = 512
+max-same-clients = 8
 #listen-proxy-proto = true
 rate-limit-ms = 100
 #stats-report-time = 360
 server-stats-reset-time = 604800
-keepalive = 60
-dpd = 3
+keepalive = 32400
+dpd = 60
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
 try-mtu-discovery = true
+#server-drain-ms = 15000
+#ocsp-response = /etc/ocserv/ocsp.der
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
+#crl = /etc/ocserv/crl.pem
 compression = false
-no-compress-limit = 256
-tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2:+VERS-TLS1.3"
+no-compress-limit = 512
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-RSA:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
+#match-tls-dtls-ciphers = true
 auth-timeout = 60
-max-ban-score = 0
-cookie-timeout = 48
+#idle-timeout = 1200
+#session-timeout = 86400
+#mobile-idle-timeout = 2400
+max-ban-score = 80
+#ban-time = 300
+ban-reset-time = 1200
+#ban-points-wrong-password = 10
+#ban-points-connection = 1
+#ban-points-kkdcp = 1
+cookie-timeout = 30
 persistent-cookies = false
 deny-roaming = false
 rekey-time = 86400
 rekey-method = ssl
-use-utmp = true
+#connect-script = /usr/bin/myscript
+#disconnect-script = /usr/bin/myscript
+#host-update-script = /usr/bin/myhostnamescript
+use-utmp = false
 use-occtl = true
+pid-file = /var/run/ocserv.pid
 log-level = 2
 net-priority = 6
 device = vpns
-predictable-ips = true
+predictable-ips = false
+default-domain = srv
+
+ipv4-network = 192.168.144.0/24
+#ipv6-network = fda9:4efe:7e3b:03ea::/64
+
+tunnel-all-dns = true
+dns = 192.168.144.1
+#nbns = 192.168.1.3
+#split-dns = example.com
 ping-leases = false
-mtu = 1412
-output-buffer = 0
+mtu = 1420
+#rx-data-per-sec = 40000
+#tx-data-per-sec = 40000
+output-buffer = 30
+#restrict-user-to-routes = true
+#restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
+#restrict-user-to-ports = "!(tcp(443), tcp(80))"
+#expose-iroutes = true
+
+select-group-by-url = false
+default-select-group = Default
+auto-select-group = false
+config-per-user = /etc/ocserv/config-per-user/
+config-per-group = /etc/ocserv/config-per-group/
+#default-user-config = /etc/ocserv/defaults/user.conf
+#default-group-config = /etc/ocserv/defaults/group.conf
+
+#route-add-cmd = "ip route add %{R} dev %{D}"
+#route-del-cmd = "ip route delete %{R} dev %{D}"
+#proxy-url = http://example.com/
+#proxy-url = http://example.com/%{U}/
+
+#user-profile = profile.xml
 cisco-client-compat = true
 dtls-psk = false
 dtls-legacy = false
 cisco-svc-client-compat = false
 client-bypass-protocol = false
+camouflage = false
+camouflage_secret = "mysecretkey"
+camouflage_realm = "Restricted Content"
+
+#custom-header = "X-My-Header: hi there"
+# HTTP headers
+included-http-headers = Strict-Transport-Security: max-age=31536000 ; includeSubDomains
+included-http-headers = X-Frame-Options: deny
+included-http-headers = X-Content-Type-Options: nosniff
+included-http-headers = Content-Security-Policy: default-src 'none'
+included-http-headers = X-Permitted-Cross-Domain-Policies: none
+included-http-headers = Referrer-Policy: no-referrer
+included-http-headers = Clear-Site-Data: "cache","cookies","storage"
+included-http-headers = Cross-Origin-Embedder-Policy: require-corp
+included-http-headers = Cross-Origin-Opener-Policy: same-origin
+included-http-headers = Cross-Origin-Resource-Policy: same-origin
+included-http-headers = X-XSS-Protection: 0
+included-http-headers = Pragma: no-cache
+included-http-headers = Cache-control: no-store, no-cache
