--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -118,7 +118,7 @@ config-per-group = /etc/ocserv/config-per-group/
 #proxy-url = http://example.com/
 #proxy-url = http://example.com/%{U}/
 
-#user-profile = profile.xml
+#user-profile = /etc/ocserv/profile.xml
 cisco-client-compat = true
 dtls-psk = false
 dtls-legacy = false
