--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -1,4 +1,4 @@
-
+default-domain = srv
 #auth = "pam"
 #auth = "pam[gid-min=1000]"
 #auth = "plain[passwd=/etc/ocserv/ocpasswd,otp=./sample.otp]"
@@ -17,116 +17,73 @@ enable-auth = "certificate"
 # listen-netns = "foo"
 
 tcp-port = 443
-udp-port = 443
-
+udp-port = 0
 run-as-user = nobody
 run-as-group = daemon
 
-#occtl-socket-file = /var/run/occtl.socket
+occtl-socket-file = /var/run/occtl.socket
 socket-file = /var/run/ocserv-socket
-#chroot-dir = /var/lib/ocserv
+pid-file = /var/run/ocserv.pid
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 dh-params = /etc/ocserv/server-dh.pem
 ca-cert = /etc/ocserv/server-ca.pem
 
-#pin-file = /etc/ocserv/pin.txt
-#srk-pin-file = /etc/ocserv/srkpin.txt
-
-#key-pin = 1234
-#srk-pin = 1234
-sec-mod-scale = 1
-
-isolate-workers = false
+select-group-by-url = false
+default-select-group = Default
+auto-select-group = false
+config-per-user = /etc/ocserv/config-per-user/
+config-per-group = /etc/ocserv/config-per-group/
+#user-profile = /etc/ocserv/profile.xml
 #banner = "Welcome"
 #pre-login-banner = "Welcome"
-max-clients = 512
-max-same-clients = 8
-#listen-proxy-proto = true
+cert-user-oid = 2.5.4.3
+cert-group-oid = 2.5.4.11
+
+sec-mod-scale = 1
+isolate-workers = false
+max-clients = 0
+max-same-clients = 0
 rate-limit-ms = 100
-#stats-report-time = 360
 server-stats-reset-time = 604800
 keepalive = 32400
 dpd = 60
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
 try-mtu-discovery = true
-#server-drain-ms = 15000
-#ocsp-response = /etc/ocserv/ocsp.der
-cert-user-oid = 2.5.4.3
-cert-group-oid = 2.5.4.11
-#crl = /etc/ocserv/crl.pem
 compression = false
 no-compress-limit = 512
-tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-RSA:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
-#match-tls-dtls-ciphers = true
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2:+VERS-TLS1.3"
 auth-timeout = 60
-#idle-timeout = 1200
-#session-timeout = 86400
-#mobile-idle-timeout = 2400
 max-ban-score = 80
-#ban-time = 300
+ban-time = 300
 ban-reset-time = 1200
-#ban-points-wrong-password = 10
-#ban-points-connection = 1
-#ban-points-kkdcp = 1
 cookie-timeout = 30
 persistent-cookies = false
 deny-roaming = false
 rekey-time = 86400
 rekey-method = ssl
-#connect-script = /usr/bin/myscript
-#disconnect-script = /usr/bin/myscript
-#host-update-script = /usr/bin/myhostnamescript
-use-utmp = false
+use-utmp = true
 use-occtl = true
-pid-file = /var/run/ocserv.pid
 log-level = 2
 net-priority = 6
 device = vpns
 predictable-ips = false
-default-domain = srv
+ping-leases = false
+mtu = 1420
+output-buffer = 30
 
 ipv4-network = 192.168.144.0/24
 #ipv6-network = fda9:4efe:7e3b:03ea::/64
-
 tunnel-all-dns = true
 dns = 192.168.144.1
-#nbns = 192.168.1.3
-#split-dns = example.com
-ping-leases = false
-mtu = 1420
-#rx-data-per-sec = 40000
-#tx-data-per-sec = 40000
-output-buffer = 30
-#restrict-user-to-routes = true
-#restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
-#restrict-user-to-ports = "!(tcp(443), tcp(80))"
-#expose-iroutes = true
 
-select-group-by-url = false
-default-select-group = Default
-auto-select-group = false
-config-per-user = /etc/ocserv/config-per-user/
-config-per-group = /etc/ocserv/config-per-group/
-#default-user-config = /etc/ocserv/defaults/user.conf
-#default-group-config = /etc/ocserv/defaults/group.conf
-
-#route-add-cmd = "ip route add %{R} dev %{D}"
-#route-del-cmd = "ip route delete %{R} dev %{D}"
-#proxy-url = http://example.com/
-#proxy-url = http://example.com/%{U}/
-
-#user-profile = /etc/ocserv/profile.xml
 cisco-client-compat = true
 dtls-psk = false
 dtls-legacy = false
 cisco-svc-client-compat = false
 client-bypass-protocol = false
-camouflage = false
-camouflage_secret = "mysecretkey"
-camouflage_realm = "Restricted Content"
 
 #custom-header = "X-My-Header: hi there"
 # HTTP headers
