--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -21,9 +21,9 @@ udp-port = 0
 run-as-user = nobody
 run-as-group = daemon
 
-occtl-socket-file = /var/run/occtl.socket
-socket-file = /var/run/ocserv-socket
-pid-file = /var/run/ocserv.pid
+occtl-socket-file = /run/occtl.socket
+socket-file = /run/ocserv-socket
+pid-file = /run/ocserv.pid
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
